# zisk

./: .dockerignore  .gitguardian.yaml  .gitignore  .gitmodules  Cargo.toml  LICENSE-MIT  Makefile  README.md  TODO.md  book.toml  build.rs  clippy.toml  compile.sh  debug.json  flake.nix  main.pilout  package.json  rustfmt.toml
cli/: Cargo.toml  build.rs
cli/cargo-zisk-cpu/: Cargo.toml
cli/cargo-zisk-gpu/: Cargo.toml
cli/src/: cargo_zisk_cli.rs  common.rs  lib.rs  main.rs  proof.rs  proof_log.rs  ux.rs
cli/tests/: cli.rs
common/: Cargo.toml
common/data/: rom.json
common/src/: air_instance.rs  air_instance_ctx.rs  air_instances_repository.rs  asm_minimal_trace.rs  buffer_allocator.rs  cpu_affinity.rs  custom_commits.rs  data_bus.rs  data_bus_mem.rs  data_bus_operation.rs  data_bus_payload_main.rs  data_bus_payload_rom.rs  data_bus_rom.rs  debug_mode.rs  distribution_ctx.rs  dummy_counter.rs  emu_minimal_trace.rs  error.rs  execution_ctx.rs  executor_stats.rs  extended_field.rs  global_info.rs  hash_mode.rs  hint.rs  hints.rs  input.rs  inst_observer.rs  lib.rs  lib_pilout.rs  local_table.rs  minimal_traces.rs  mpi_context.rs  paths.rs  planner_helpers.rs  profiling.rs  proof.rs  proof_ctx.rs  proof_log.rs  prover.rs  publics.rs  (+17 more)
components/: Cargo.toml  components.md
components/basic/: README.md
components/src/: component.rs  lib.rs
core/: Cargo.toml  ZippelLabs_Core-audit-draft-report.md  build.rs
core/doc/: Trace.md
core/src/: elf2rom.rs  elf_extraction.rs  fcall.rs  float.rs  helpers.rs  inst_context.rs  inst_observer.rs  lib.rs  mem.rs  mem_section.rs  ops_core.rs  ops_core_context.rs  program2rom.rs  riscv2zisk.rs  riscv2zisk_context.rs  rom.rs  utils.rs  zisk_definitions.rs  zisk_inst.rs  zisk_inst_builder.rs  zisk_opcodes.rs  zisk_operation.rs  zisk_operations.rs  zisk_ops.rs  zisk_ops_costs.rs  zisk_registers.rs  zisk_required_operation.rs  zisk_rom.rs  zisk_rom_2_asm.rs  zv2zisk.rs
data-bus/: Cargo.toml
data-bus/src/: data_bus.rs  data_bus_file.rs  data_bus_mem.rs  data_bus_operation.rs  data_bus_player.rs  data_bus_rom.rs  lib.rs
definitions/: Cargo.toml
definitions/src/: hints.rs  labels.rs  lib.rs  profile.rs  syscall.rs
emulator/: Cargo.toml  README.md  build.rs
emulator/benches/: benchmark.rs
emulator/src/: disasm.rs  elf_symbol_reader.rs  emu.rs  emu_context.rs  emu_costs.rs  emu_full_trace.rs  emu_options.rs  emu_par_options.rs  emu_reg_trace.rs  emu_required.rs  emu_segment.rs  emu_slice.rs  emu_trace.rs  emulate.rs  emulator.rs  emulator_errors.rs  lib.rs  mem.rs  mem_operations_stats.rs  mem_trace.rs  regions_of_interest.rs  stats.rs  stats_cost_mark.rs  stats_costs.rs  stats_coverage_report.rs  stats_report.rs
emulator/tests/: wasm.rs
estark/: Cargo.toml  bindings.rs  build.rs
estark/src/: estark_prover.rs  ffi.rs  lib.rs  public_inputs.rs  stark_info.rs  verification_key.rs
examples/: Cargo.toml
examples/collatz/: README.md
examples/common/: Cargo.toml
examples/fib/: Cargo.toml  README.md  build.rs  rust-toolchain
examples/fib4/: Cargo.toml
examples/fibfull/: Cargo.toml  bindings.rs  build.rs  futurama-quotes.txt  wrapper.h
examples/fibonacci/: README.md
examples/fibonacci-square/: .gitignore  Cargo.toml  README.md
examples/fibonacci-vadcop/: .gitignore  Cargo.toml  README.md  inputs.hex  inputs.json
examples/fibv/: Cargo.toml  build.rs
examples/gcd/: README.md
examples/hash/: README.md
examples/merkle-tree/: README.md
examples/primes/: README.md
examples/utils/: Cargo.toml
examples/wasm-sum/: Cargo.toml  README.md
examples/zisk-basic/: Cargo.toml
examples/zisk-wc/: Cargo.toml
examples/zkevm/: Cargo.toml
examples/zkevm_basic/: Cargo.toml
executor/: Cargo.toml
executor/src/: adapters.rs  air_classifier.rs  asm_resources.rs  asm_runner_supervisor.rs  asm_transport.rs  chunk_collector_store.rs  collector.rs  dummy_counter.rs  emu_asm.rs  emu_asm_stub.rs  emu_rust.rs  error.rs  execution.rs  executor.rs  executor_test.rs  init.rs  instance_factory.rs  instance_set.rs  lib.rs  materialize_phase.rs  metrics_proxy.rs  mt_chunk_processor.rs  plan.rs  plan_phase.rs  planner.rs  planner_registry.rs  ports.rs  registry.rs  rom_executor.rs  runner_asm.rs  runner_emu.rs  sm_builtins.rs  sm_bundle.rs  sm_dyn_bundle.rs  sm_precompiles.rs  sm_registry.rs  sm_static_bundle.rs  state.rs  static_data_bus.rs  static_data_bus_collect.rs  (+11 more)
goldilocks/: Cargo.toml
goldilocks/src/: goldilocks_utils.rs  goldilocksp3.rs  lib.rs
integration-tests/: Cargo.toml
integration-tests/src/: lib.rs
integration-tests/tests/: diagnostic_embedded.rs  diagnostic_hints_smoke.rs  diagnostic_remote.rs  liveness.rs  panic_assembly.rs  panic_emulator.rs  recovery.rs  recurser.rs  recurser_negative.rs  zisklib.rs
lib-float/: Cargo.toml  bindings.rs  build.rs
lib-float/c/: Dockerfile.build  Makefile
lib-float/src/: lib.rs  lib_c.rs
node/: Cargo.toml  Dockerfile  README.md  build.rs
node/config/: clusters.example.yml  clusters.yml  node.example.toml
node/docker/: Dockerfile  docker-compose.yml
node/proto/: zisk_user_api.proto
node/scripts/: install.sh
node/src/: coordinator_client.rs  errors.rs  lib.rs  logging.rs  util.rs
node/tests/: integration.rs
pil/: Cargo.toml  config.pil  constants.pil  operations.pil  opids.pil  zisk.pil
pil/fork_0/: Cargo.toml
pil/pil/: zisk.pil
pil/src/: constants.rs  lib.rs  packed_info.rs
pilout/: Cargo.toml  build.rs
pilout/src/: lib.rs  pilout.proto  pilout_proxy.rs
proofman/: Cargo.toml
proofman-cli/: Cargo.toml
proofman-cli/src/: main.rs
proofman/benches/: trace_pol.rs
proofman/pil2-stark/: Cargo.toml
proofman/src/: buffer_allocator.rs  channel.rs  cli.rs  config.rs  constraints.rs  executor.rs  hash_btree.rs  (+31 more)
proofman2/: Cargo.toml
prover-backend/: Cargo.toml
recurser/: Cargo.toml
rom-merkle/: Cargo.toml
rom-setup/: Cargo.toml  build.rs
sdk/: Cargo.toml  README.md  build.rs
server/: Cargo.toml  build.rs
setup/: Cargo.toml
stream/: Cargo.toml
test-artifacts/: Cargo.toml  README.md  build.rs
unit-tests/: Cargo.toml
(+3969 files in other folders)
