[workspace.package]
version = "0.11.0"
edition = "2021"
license = "Apache-2.0 or MIT"
keywords = ["zisk", "zkvm", "zero-knowledge"]
repository = "https://github.com/0xPolygonHermez/zisk"
categories = ["cryptography"]

[workspace]
members = [
    "cli",
    "core",
    "data-bus",
    "emulator",
    "executor",
    "pil",
    "riscv",
    "rom-setup",
    "state-machines/arith",
    "state-machines/binary",
    "state-machines/main",
    "state-machines/mem",
    "state-machines/mem-cpp",
    "state-machines/rom",
    "witness-computation",
    "ziskos/entrypoint",
    "precompiles/common",
    "precompiles/keccakf",
    "precompiles/sha256f",
    "lib-c",
    "emulator-asm/asm-runner",
    "ziskclib",
    "common",
    "tools/circuit",
    "server",
    "consensus/crates/grpc-api",
    "consensus/crates/prover",
    "consensus/crates/prover-service",
    "consensus/crates/comm",
    "consensus/crates/config",
    "consensus/crates/coordinator",
    "consensus/crates/coordinator-service",
    "consensus/crates/common",
]

resolver = "2"

[profile.release]
opt-level = 3

[profile.bench]
opt-level = 3

[workspace.dependencies]
# Internal crates
cargo-zisk = { path = "cli" }
zisk-common = { path = "common" }
zisk-core = { path = "core" }
data-bus = { path = "data-bus" }
ziskemu = { path = "emulator" }
asm-runner = { path = "emulator-asm/asm-runner" }
executor = { path = "executor" }
lib-c = { path = "lib-c" }
zisk-pil = { path = "pil" }
precomp-arith-eq = { path = "precompiles/arith_eq" }
precompiles-common = { path = "precompiles/common" }
precompiles-helpers = { path = "precompiles/helpers" }
precomp-keccakf = { path = "precompiles/keccakf" }
precomp-sha256f = { path = "precompiles/sha256f" }
riscv = { path = "riscv" }
rom-setup = { path = "rom-setup" }
server = { path = "server" }
sm-arith = { path = "state-machines/arith" }
sm-binary = { path = "state-machines/binary" }
sm-main = { path = "state-machines/main" }
sm-mem = { path = "state-machines/mem" }
mem-common = { path = "state-machines/mem-common" }
mem-planner-cpp = { path = "state-machines/mem-cpp" }
sm-rom = { path = "state-machines/rom" }
zisk-witness = { path = "witness-computation" }
ziskclib = { path = "ziskclib" }
ziskos = { path = "ziskos/entrypoint" }
circuit = { path = "tools/circuit" }

# Consensus crates
consensus-grpc-api = { path = "consensus/crates/grpc-api" }
consensus-prover = { path = "consensus/crates/prover" }
consensus-prover-service = { path = "consensus/crates/prover-service" }
consensus-comm = { path = "consensus/crates/comm" }
consensus-common = { path = "consensus/crates/common" }
consensus-config = { path = "consensus/crates/config" }
consensus-coordinator = { path = "consensus/crates/coordinator" }
consensus-coordinator-service = { path = "consensus/crates/coordinator-service" }

# Proofman
proofman = { git = "https://github.com/0xPolygonHermez/pil2-proofman.git", branch = "feature/server-vt-wip" }
proofman-common = { git = "https://github.com/0xPolygonHermez/pil2-proofman.git", branch = "feature/server-vt-wip" }
proofman-macros = { git = "https://github.com/0xPolygonHermez/pil2-proofman.git", branch = "feature/server-vt-wip" }
proofman-util = { git = "https://github.com/0xPolygonHermez/pil2-proofman.git", branch = "feature/server-vt-wip" }
pil-std-lib = { git = "https://github.com/0xPolygonHermez/pil2-proofman.git", branch = "feature/server-vt-wip" }
witness = { git = "https://github.com/0xPolygonHermez/pil2-proofman.git", branch = "feature/server-vt-wip" }
fields = { git = "https://github.com/0xPolygonHermez/pil2-proofman.git", branch = "feature/server-vt-wip" }
# Proofman Local development
# proofman = { path = "../pil2-proofman/proofman" }
# proofman-common = { path = "../pil2-proofman/common" }
# proofman-macros = { path = "../pil2-proofman/macros" }
# proofman-util = { path = "../pil2-proofman/util" }
# pil-std-lib = { path = "../pil2-proofman/pil2-components/lib/std/rs" }
# witness = { path = "../pil2-proofman/witness" }
# fields = { path = "../pil2-proofman/fields" }

# External dependencies
rayon = "1.10"
num-bigint = "0.4"
num-traits = "0.2"
itertools = "0.14"
colored = "3"
ark-ff = "0.5.0"
ark-std = "0.5.0"
ark-secp256k1 = "0.5"
ark-bn254 = "0.5.0"
sysinfo = "0.37"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
anyhow = "1.0"
libloading = "0.8"
named-sem = "0.2.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "env-filter",
    "json",
] }
mpi = { version = "0.8.0" }
clap = { version = "4", features = ["derive", "env"] }
futures = { version = "0.3" }
thiserror = { version = "2" }
bytes = "1.0"

tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures-util = "0.3"
uuid = { version = "1.0", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }

# gRPC dependencies
tonic = "0.14"
tonic-prost = "0.14"
tonic-build = "0.14"
tonic-prost-build = "0.14"
# Protocol Buffers support - match tonic's prost version
prost = "0.14"
prost-types = "0.14"
config = "0.15"
toml = "0.9"
