[workspace.package]
version = "1.0.0-beta"
edition = "2021"
license = "Apache-2.0 or MIT"
keywords = ["zisk", "zkvm", "zero-knowledge"]
repository = "https://github.com/0xPolygonHermez/zisk"
categories = ["cryptography"]

[workspace.metadata]
gha_package_setup_version = "pre-develop-1.0.0-beta"
gha_zisk_testvectors_branch = "develop-0.3.0"
gha_zisk_ethproofs_branch = "develop-0.10.0"
gha_zisk_eth_client_branch = "develop-0.10.0"
gha_zisk_template_branch = "pre-develop-1.0.0-beta"

[workspace]
members = [
  "cli",
  "core",
  "integration-tests",
  "data-bus",
  "emulator",
  "executor",
  "pil",
  "prover-backend",
  "prover-backend/macros",
  "riscv",
  "rom-setup",
  "state-machines/arith",
  "state-machines/binary",
  "state-machines/frequent-ops",
  "state-machines/main",
  "state-machines/mem",
  "state-machines/mem-common",
  "state-machines/mem-cpp",
  "state-machines/rom",
  "ziskos/entrypoint",
  "ziskos-staticlib",
  "ziskos-hints",
  "precompiles/arith_eq",
  "precompiles/arith_eq_384",
  "precompiles/common",
  "precompiles/helpers",
  "precompiles/hints",
  "precompiles/keccakf",
  "precompiles/sha256f",
  "precompiles/blake2",
  "precompiles/big_int",
  "precompiles/dma",
  "precompiles/poseidon2",
  "lib-c",
  "lib-float",
  "emulator-asm/asm-runner",
  "ziskclib",
  "common",
  "stream",
  "tools/circuit",
  "distributed/crates/coordinator",
  "distributed/crates/coordinator-server",
  "distributed/crates/coordinator-api",
  "distributed/crates/coordinator-client",
  "distributed/crates/cluster-api",
  "distributed/crates/cluster-common",
  "distributed/crates/worker",
  "distributed/crates/prove-client",
  "sdk",
  "ziskbuild",
  "definitions",
  "zkvm-interface",
  "verifier",
]
resolver = "2"
exclude = ["test-artifacts"]

[profile.release]
opt-level = 3

[profile.bench]
opt-level = 3

[workspace.dependencies]
# Internal crates
zisk-common = { path = "common" }
zisk-stream = { path = "stream" }
zisk-core = { path = "core" }
data-bus = { path = "data-bus" }
ziskemu = { path = "emulator" }
asm-runner = { path = "emulator-asm/asm-runner" }
executor = { path = "executor" }
lib-c = { path = "lib-c" }
lib-float = { path = "lib-float" }
zisk-pil = { path = "pil" }
precomp-arith-eq = { path = "precompiles/arith_eq" }
precomp-arith-eq-384 = { path = "precompiles/arith_eq_384" }
precompiles-common = { path = "precompiles/common" }
precompiles-helpers = { path = "precompiles/helpers" }
precomp-keccakf = { path = "precompiles/keccakf" }
precomp-sha256f = { path = "precompiles/sha256f" }
precomp-blake2 = { path = "precompiles/blake2" }
precomp-poseidon2 = { path = "precompiles/poseidon2" }
precomp-big-int = { path = "precompiles/big_int" }
precomp-dma = { path = "precompiles/dma" }
riscv = { path = "riscv" }
rom-setup = { path = "rom-setup" }
sm-arith = { path = "state-machines/arith" }
sm-binary = { path = "state-machines/binary" }
sm-main = { path = "state-machines/main" }
sm-mem = { path = "state-machines/mem" }
sm-frequent-ops = { path = "state-machines/frequent-ops" }
mem-common = { path = "state-machines/mem-common" }
mem-planner-cpp = { path = "state-machines/mem-cpp" }
sm-rom = { path = "state-machines/rom" }
test-artifacts = { path = "test-artifacts" }
ziskclib = { path = "ziskclib" }
zkvm-interface = { path = "zkvm-interface" }
ziskos = { path = "ziskos/entrypoint" }
ziskos-hints = { path = "ziskos-hints" }
circuit = { path = "tools/circuit" }
zisk-sdk = { path = "sdk" }
zisk-prover-backend = { path = "prover-backend" }
zisk-build = { path = "ziskbuild" }
precompiles-hints = { path = "precompiles/hints" }
zisk-verifier = { path = "verifier" }
zisk-definitions = { path = "definitions" }

# Distributed crates
zisk-cluster-common = { path = "distributed/crates/cluster-common" }
zisk-coordinator = { path = "distributed/crates/coordinator" }
zisk-cluster-api = { path = "distributed/crates/cluster-api" }
zisk-worker = { path = "distributed/crates/worker" }
zisk-coordinator-server = { path = "distributed/crates/coordinator-server" }
zisk-coordinator-api = { path = "distributed/crates/coordinator-api" }
zisk-coordinator-client = { path = "distributed/crates/coordinator-client" }

# Proofman
proofman = { git = "https://github.com/0xPolygonHermez/pil2-proofman.git", branch = "pre-develop-1.0.0-beta" }
proofman-common = { git = "https://github.com/0xPolygonHermez/pil2-proofman.git", branch = "pre-develop-1.0.0-beta" }
proofman-macros = { git = "https://github.com/0xPolygonHermez/pil2-proofman.git", branch = "pre-develop-1.0.0-beta" }
proofman-verifier = { git = "https://github.com/0xPolygonHermez/pil2-proofman.git", branch = "pre-develop-1.0.0-beta" }
proofman-util = { git = "https://github.com/0xPolygonHermez/pil2-proofman.git", branch = "pre-develop-1.0.0-beta" }
proofman-starks-lib-c = { git = "https://github.com/0xPolygonHermez/pil2-proofman.git", branch = "pre-develop-1.0.0-beta" }
pil-std-lib = { git = "https://github.com/0xPolygonHermez/pil2-proofman.git", branch = "pre-develop-1.0.0-beta" }
witness = { git = "https://github.com/0xPolygonHermez/pil2-proofman.git", branch = "pre-develop-1.0.0-beta" }
fields = { git = "https://github.com/0xPolygonHermez/pil2-proofman.git", branch = "pre-develop-1.0.0-beta" }
pil2-stark-setup = { git = "https://github.com/0xPolygonHermez/pil2-proofman.git", branch = "pre-develop-1.0.0-beta" }
 

# Proofman Local development
# proofman = { path = "../pil2-proofman/proofman" }
# proofman-common = { path = "../pil2-proofman/common" }
# proofman-macros = { path = "../pil2-proofman/macros" }
# proofman-verifier = { path = "../pil2-proofman/verifier" }
# proofman-util = { path = "../pil2-proofman/util" }
# pil-std-lib = { path = "../pil2-proofman/pil2-components/lib/std/rs" }
# witness = { path = "../pil2-proofman/witness" }
# fields = { path = "../pil2-proofman/fields" }
# pil2-stark-setup = { path = "../pil2-proofman/setup/pil2-stark" }

# External dependencies
arc-swap = "1"
rayon = "1.10"
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
itertools = "0.14"
colored = "3"
ark-ff = "0.5.0"
ark-std = "0.5.0"
ark-secp256k1 = "0.5"
ark-secp256r1 = "0.5"
ark-bn254 = "0.5.0"
ark-bls12-381 = "0.5.0"
sysinfo = "0.38"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
anyhow = "1.0"
named-sem = "0.2.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "fmt",
  "env-filter",
  "json",
] }
tracing-appender = "0.2"
static_assertions = "1"
ripemd = "0.1.3"

clap = { version = "4", features = ["derive", "env"] }
futures = { version = "0.3" }
thiserror = { version = "2" }
bincode = { version = "2.0", default-features = false, features = [
  "serde",
  "std",
] }
blake3 = "1.3.1"
bytes = "1"
hex = "0.4"
rand = "0.8.5"

tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
futures-util = "0.3"
uuid = { version = "1", features = ["serde", "v5"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = { version = "0.10.9", features = ["compress"] }
paste = "1.0"

# gRPC dependencies
tonic = "0.14"
tonic-health = "0.14"
tonic-prost = "0.14"
tonic-build = "0.14"
tonic-prost-build = "0.14"
# Protocol Buffers support - match tonic's prost version
prost = "0.14"
prost-types = "0.14"
config = "0.15"
toml = "0.9.8"
serial_test = "3.4"
borsh = { version = "1.5", features = ["derive"] }
reqwest = { version = "0.12", features = [
  "stream",
  "json",
  "rustls-tls",
], default-features = false }
vergen-git2 = { version = "9", default-features = false, features = ["build"] }
env = "1.0.1"
# Pin: time 0.3.48 triggers a rustc E0119 coherence false-positive when built
# alongside rcgen 0.14.x. 0.3.47 is the newest version that satisfies
# vergen-git2's `time ^0.3.45` and avoids the bug. Consumed by cli (workspace=true).
time = "=0.3.47"
