[package]
name = "cargo-zisk"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }

[[bin]]
name = "cargo-zisk"
path = "src/bin/cargo-zisk.rs"

[build-dependencies]
vergen-git2.workspace = true

[dependencies]
zisk-common = { workspace = true }
zisk-build = { workspace = true }
zisk-prover-backend = { workspace = true }
executor = { workspace = true }
rom-setup = { workspace = true }
zisk-core = { workspace = true }
zisk-pil = { workspace = true }

colored = { workspace = true }
fields = { workspace = true }
proofman = { workspace = true }
proofman-common = { workspace = true }
proofman-util = { workspace = true }
sysinfo = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

clap = { workspace = true }
dirs = "6"
rand = "0.9"
target-lexicon = "0.13"
reqwest = { workspace = true }
tokio = { version = "1", features = ["full"] }
indicatif = "0.17.8"
futures = { workspace = true }
yansi = "1.0.1"

[features]
default = []
cpu-only = ["zisk-build/cpu-only"]
diagnostic = ["zisk-prover-backend/diagnostic"]
custom_rust_llvm = []
stats = []
verify = ["fields/verify"]
