[package]
name = "zisk-common"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }

build = "build.rs"

[dependencies]
zisk-core = { workspace = true }
zisk-pil = { workspace = true }

witness = { workspace = true }
proofman-common = { workspace = true }
proofman = { workspace = true }
fields = { workspace = true }
tracing = { workspace = true}
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
bytemuck = { workspace = true }
zstd = { workspace = true }

# Distributed mode (mpi) is only supported on Linux x86_64
[target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dependencies]
mpi = { workspace = true }

libc = "0.2"

[features]
default = []
disable_distributed = ["proofman/disable_distributed", "proofman-common/disable_distributed"]
stats = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(distributed)'] }