[package]
name = "zisk-common"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }

[dependencies]
zisk-core = { workspace = true }
zisk-verifier = { workspace = true }

proofman-common = { workspace = true }
proofman-verifier = { workspace = true }
proofman = { workspace = true }
fields = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
libc = "0.2"
dirs = "6"
alloy-sol-types = { version = "1.5.7" }

# QUIC networking
tokio = { workspace = true }
quinn = "0.11"
rustls = { version = "0.23", features = ["ring"] }
rcgen = "0.14"

bincode = { workspace = true }
paste = { workspace = true }

[features]
default = []
stats = []
