[package]
name = "zisk-common"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }

[dependencies]
zisk-core = { workspace = true }
zisk-verifier = { workspace = true }
zisk-definitions = { workspace = true }
zisk-stream = { workspace = true, features = ["quic"] }

proofman-common = { workspace = true }
proofman-verifier = { workspace = true, features = ["parallel"] }
proofman = { workspace = true }
pil-std-lib = { workspace = true }
fields = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
libc = "0.2"
dirs = "6"
alloy-sol-types = { version = "1.5.7" }

bincode = { workspace = true }
paste = { workspace = true }

[features]
default = []
stats = []
