[package]
name = "pil2-components"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
proofman = { path = "../proofman" }
proofman-mock = { path = "../proofman-mock" }
goldilocks = { path = "../goldilocks" }
log = { version = "0.4.20" }