[package]
name = "pil2-components"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pil2-stark = { path = "../pil2-stark"}
proofman = { path = "../old/proofman-old" }
proofman-mock = { path = "../old/proofman-mock" }
pilout = { path = "../pilout" }
goldilocks = { path = "../goldilocks" }
log = { workspace = true }