[package]
name = "zisk-core"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }

[lib]
name = "zisk_core"
path = "src/lib.rs"

[[bin]]
name = "riscv2zisk"
path = "src/bin/riscv2zisk.rs"

[dependencies]
riscv = { path = "../riscv" }
zisk-pil = { path = "../pil" }

rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

indexmap = { version = "2.2.6", features = ["serde"] }
json = "0.12.4"
elf = "0.7.4"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
sha2 = { version = "0.10.9", features = ["compress"] }
generic-array = "0.14"
precompiles-helpers = { path = "../precompiles/helpers" }
lib-c = { path = "../lib-c" }
ziskos = { path = "../ziskos/entrypoint" }
fields = { workspace=true }

[features]
default = []
# sp = []