[package]
name = "zisk-core"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }

[lib]
name = "zisk_core"
path = "src/lib.rs"

[[bin]]
name = "riscv2zisk"
path = "src/bin/riscv2zisk.rs"

[dependencies]
precompiles-helpers = { workspace = true }
lib-c = { workspace = true }
ziskos-hints = { workspace = true }
riscv = { workspace = true }

rayon = { workspace = true }
serde = { workspace = true }
fields = { workspace = true }
sha2 = { workspace = true }
paste = { workspace = true }


elf = "0.7.4"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }


[features]
default = []
debug_dma = []
# sp = []
