[package]
name = "data-bus"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }

[dependencies]
zisk-common = { workspace = true }
zisk-core = { workspace = true }
