[package]
name = "zisk-definitions"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }

[lib]
name = "zisk_definitions"
path = "src/lib.rs"

[dependencies]

# QUIC networking

[features]
default = []
disable_distributed = []
stats = []
