[package]
name = "ziskemu"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }

[lib]
name = "ziskemu"
path = "src/lib.rs"

[[bin]]
name = "ziskemu"
path = "src/bin/ziskemu.rs"

[dependencies]
zisk-common = { workspace = true }
zisk-core = { workspace = true }
zisk-pil = { workspace = true }
riscv = { workspace = true }
data-bus = { workspace = true }
rayon = { workspace = true }
mem-common = { workspace = true }
sm-arith = { workspace = true }
sm-binary = { workspace = true }
proofman-common = { workspace = true }

fields = { workspace=true }
clap = { workspace = true }
sysinfo = { workspace = true }
object = "0.37.3"
memmap2 = "0.9.8"
num-format = "0.4"
symbolic-demangle = { version = "12.16", features = ["rust", "cpp"] }
symbolic-common = "12.16"

[build-dependencies]
vergen-git2 = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false

[features]
default = []
debug_stats_trace = []
minimal_trace_index_debug = []
debug_call_stack = []
gpu = ["packed"]
packed = []
# sp = []
no_lib_link = ["zisk-pil/no_lib_link"]
