[package]
name = "estark"
version = "0.0.1"
authors = ["Polygon Labs"]
edition = "2021"
readme = "README.md"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_derive = "1.0.196"
proofman = { path = "../proofman" }
goldilocks = { path = "../goldilocks" }
util = { path = "../util" }
log = { version = "0.4", default-features = false }

[features]
default = ["no_lib_link"]
no_lib_link = []