[workspace]
members = [
  "sha-hasher/host",
  "multiple-programs/host",
  "aggregation/host",
  "big-program/host",
  "hints/host",
]

resolver = "2"

[profile.release]
opt-level = 3

[workspace.dependencies]
ziskos = { path = "../ziskos/entrypoint" }
zisk-sdk = { path = "../sdk" }
test-artifacts = { path = "../test-artifacts" }
# Pin: time 0.3.48 triggers a rustc E0119 coherence false-positive when built
# alongside rcgen 0.14.x. 0.3.47 is the newest version that avoids the bug.
# Used via `workspace = true` in example hosts to constrain the workspace lockfile.
time = "=0.3.47"
