[workspace]
members = [
  "sha-hasher/host",
  "multiple-programs/host",
  "aggregation/host",
  "big-program/host",
  "hints/host",
  "hash/host",
  "hash/guest",
  "fibonacci/host",
  "fibonacci/guest",
  "merkle-tree/host",
  "gcd/host",
  "gcd/guest",
  "primes/host",
  "primes/guest",
  "collatz/host",
  "collatz/guest",
  "utils"
]

resolver = "2"

[profile.release]
opt-level = 3

[workspace.dependencies]
ziskos = { path = "../ziskos/entrypoint" }
zisk-sdk = { path = "../sdk" }
test-artifacts = { path = "../test-artifacts" }
examples-utils = { path = "utils"}
