[package]
name = "executor"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }

[dependencies]
sm-main = { path = "../state-machines/main" }
sm-rom = { path = "../state-machines/rom" }
rom-setup = { path = "../rom-setup" }
zisk-pil = { path = "../pil" }
ziskemu = { path = "../emulator" }
zisk-core = { path = "../core" }
zisk-common = { path = "../common" }
data-bus = { path = "../data-bus" }
asm-runner = { path = "../emulator-asm/asm-runner" }
mem-planner-cpp = { path = "../state-machines/mem-cpp" }

proofman = { workspace = true }
proofman-common = { workspace = true }
proofman-util = { workspace = true }
witness = { workspace = true }
fields = { workspace=true }
tracing = { workspace = true }
itertools = { workspace = true }
rayon = { workspace = true }
pil-std-lib = { workspace = true }

[features]
default = []
disable_distributed = ["proofman/disable_distributed", "proofman-common/disable_distributed"]
gpu = ["proofman-common/gpu", "proofman/gpu" ]
stats = []
