[package]
name = "executor"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }

[dependencies]
sm-main = { workspace = true }
sm-rom = { workspace = true }
rom-setup = { workspace = true }
zisk-pil = { workspace = true }
ziskemu = { workspace = true }
zisk-core = { workspace = true }
zisk-common = { workspace = true }
data-bus = { workspace = true }
asm-runner = { workspace = true }
mem-planner-cpp = { workspace = true }
mem-common = { workspace = true }

proofman = { workspace = true }
proofman-common = { workspace = true }
proofman-util = { workspace = true }
witness = { workspace = true }
fields = { workspace=true }
tracing = { workspace = true }
itertools = { workspace = true }
rayon = { workspace = true }
pil-std-lib = { workspace = true }
crossbeam = "0.8.4"

precomp-keccakf = { workspace = true }
precomp-sha256f = { workspace = true }
precomp-arith-eq = { workspace = true }
precomp-arith-eq-384 = { workspace = true }
precomp-big-int = { workspace = true }

sm-arith = { workspace = true }
sm-binary = { workspace = true }
sm-mem = { workspace = true }
sm-frequent-ops = { workspace = true }

[features]
default = []
disable_distributed = ["proofman/disable_distributed", "proofman-common/disable_distributed"]
gpu = ["proofman-common/gpu", "proofman/gpu" ]
packed = ["proofman-common/packed"]
stats = []
