[package]
name = "goldilocks"
version = "0.1.0"
edition = "2021"
description = "Polygon zkEVM Goldilocks"
authors = ["Polygon Labs"]

[dependencies]
p3-goldilocks = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-field = { git = "https://github.com/Plonky3/Plonky3.git" }
rand = "0.8.4"
serde = { version = "1.0.130", features = ["derive"] }
num-bigint = "0.4.4"
gmp-mpfr-sys = "1.4.5"

[features]
default = ["goldilocksp3"]
goldilocksp3 = []